Added a navigation menu (anchor links); reference made regarding utilization of BEM methodlogy (see https://getbem.com/).

--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+/* Reference https://getbem.com/ "BEM — is a methodology that helps you to create reusable components and code sharing in front‑end development" */
+
 @import url('https://fonts.googleapis.com/css3?family=Lato:ital,wght@0,400;1,700&display=swap');
 
 * {
