--- a/style.css
+++ b/style.css
@@ -65,3 +65,10 @@ nav {
 .nav__link--anchor-primary:hover {
     background-color: #5d3eff;
 }
+
+.personal__logo {
+    font-size: 24px;
+    color: #6030b1;
+    margin: 0 12px;
+    font-weight: bold;
+}
