After realizing that each icon had a class from fontawesome.com, I added my class desired prior to the .

--- a/style.css
+++ b/style.css
@@ -165,9 +165,9 @@ nav {
 }
 
 .about-me__links {
-    font-size: 24px;
+    font-size: 25px;
     text-decoration: none;
-    padding: 0 250px;
+    padding: 7px 21px 0px 21px;
 }
 
 .emph {
