--- a/style.css
+++ b/style.css
@@ -203,9 +203,17 @@ section: :nth-child(even) {
 }
 
 /*----- Tech Stach Section -----*/
+.LANGUAGE {
+    width: 25%;
+}
+
 .language__img--wrapper {
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 25%;
+}
+
+.language__list {
+    display: flex;
+    width: 100%;
 }
