--- a/style.css
+++ b/style.css
@@ -204,13 +204,15 @@ section: :nth-child(even) {
 
 /*----- Tech Stach Section -----*/
 .LANGUAGE {
-    width: 25%;
+    /* width: 25%; */
 }
 
 .language__img--wrapper {
     display: flex;
     justify-content: center;
     align-items: center;
+    /*width: 50px;*/
+    /*height: 50px;*/
 }
 
 .language__list {
