--- a/style.css
+++ b/style.css
@@ -23,17 +23,12 @@ h1, h2, h3, h4, h5, h6, span {
     line-height: 1.25;
 }
 
-
 .flex {
     display: flex;
 }
 
 .flex-1{
     flex: 1;
-}
-
-h1 {
-    font-size: 36px;
 }
 
 /* Paragraph Style. */
@@ -59,7 +54,7 @@ nav {
 }
 
 /* EXCELLENT For Reusable Code: it does the all of the even sections (2...4...6, etc.) providing a contrast between the sections when hovered over. */
-section: :nth-child(even) {
+section::nth-child(even) {
     background-color:#f8f8f8;
 }
 
@@ -142,6 +137,11 @@ section: :nth-child(even) {
     height: 65%;
 }
 
+/* Specific Header 1 Style Given */
+h1 {
+    font-size: 36px;
+}
+
 /*----- Navigation Menu Styles -----*
 /* How the list was made to line up vs. being stack upon one another. */
 .nav__link--list {
@@ -211,11 +211,20 @@ section: :nth-child(even) {
     display: flex;
     justify-content: center;
     align-items: center;
-    /*width: 50px;*/
-    /*height: 50px;*/
+    width: 50px;*/
+    height: 50px;
 }
 
 .language__list {
     display: flex;
     width: 100%;
+}
+
+.language__list--Contatiner {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    max-width: 625px;
+    margin: 0 auto;
+    text-align: center;
 }
