--- a/style.css
+++ b/style.css
@@ -216,6 +216,18 @@ h1 {
     padding-bottom: 100px;
 }
 
+.language__img {
+    width: 100%;
+    max-width: 100px;
+    transition: all 300ms ease;
+}
+
+.language__img:hover {
+    filter:brightness(80%);
+    opacity: 0.86;
+    transform: scale(0.9);
+}
+
 .language__list {
     display: flex;
     width: 100%;
@@ -244,9 +256,16 @@ h1 {
     padding-top: 8px;
 }
 
-.ZOOM2 {
+.ZOOM3 {
     /* Zoomed icon in: so that size is not compromised, and so the end user can read icon. */
     transform: scale(1.35);/*padding-bottom: 8px;*/
+    align-items: center;
+    padding-top: 8px;
+}
+
+.ZOOM4 {
+    /* Zoomed icon in: so that size is not compromised, and so the end user can read icon. */
+    transform: scale(1.55);/*padding-bottom: 8px;*/
     align-items: center;
     padding-top: 8px;
 }
