--- a/style.css
+++ b/style.css
@@ -215,13 +215,13 @@ h1 {
     justify-content: center;
     align-items: center;
     width: 150px;
-    height: 100px;
-    padding-bottom: /*100px*/ 25px 16px;
+    height: 125px;
+    padding-bottom: /*100px*/ 20px 16px;
 }
 
 .language__img {
     width: 100%;
-    max-width: 150px;
+    max-width: 100px;
     transition: all 300ms ease;
     padding: 12px;
 }
@@ -243,6 +243,15 @@ h1 {
 .language__name {
     position: absolute;
     bottom: 0;
+    transform: scale(0);
+    transition: all 300ms;
+    font-size: 20px;
+    opacity: 0;
+}
+
+.AI {
+    position: absolute;
+    top: 0;
     transform: scale(0);
     transition: all 300ms;
     font-size: 20px;
