--- a/style.css
+++ b/style.css
@@ -207,8 +207,18 @@ h1 {
 }
 
 .zoom3 {
+    transform: scale(3);
+    padding-top: 8px;
+}
+
+.zoom4 {
     transform: scale(-1.5);
     padding-top: 8px;
+}
+
+.zoom5 {
+    transform: scale(2);
+    padding-top: 12px;
 }
 
 .LANGUAGE {
@@ -253,7 +263,7 @@ h1 {
     bottom: 0;
     transform: scale(0);
     transition: all 300ms;
-    font-size: 20px;
+    font-size: 24px;
     opacity: 0;
 }
 
@@ -262,19 +272,31 @@ h1 {
     opacity: 1;
 }
 
-.AI {
+.cloud {
     position: absolute;
     top: 0;
+    transform: scale(2);
+    transition: all 300ms ease;
+    font-size: 24px;
+    opacity: 0;
+}
+
+.topSpace {
+    position: absolute;
+    align-items: center;
+    justify-content: center;
+    top: 0;
     transform: scale(0);
-    transition: all 300ms;
+    transition: all 300ms ease;
     font-size: 20px;
     opacity: 0;
 }
 
-.AI:hover .language__name {
+.topSpace:hover .language__name {
     transform: scale(1);
     opacity: 1;
 }
+
 
 /* AI Chatbot Icon I had to make. */
 .groovy {
