--- a/style.css
+++ b/style.css
@@ -121,7 +121,15 @@ section::nth-child(even) {
 
 /* Bold and Colored letterimg in Intro. paragraph in "About Me" Section. */
 .emph {
-    font-weight: 600;
+    font-weight: 700;
+    background: linear-gradient(to right, #71713a, #544478);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+.emph2 {
+    font-weight: 900;
+    text-decoration: underline;
     background: linear-gradient(to right, #71713a, #544478);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
@@ -218,7 +226,24 @@ h1 {
 
 .zoom5 {
     transform: scale(2);
+    padding-top: 4px;
+    display: inline;
+}
+
+.zoom6 {
+    transform: scale(1.2);
     padding-top: 12px;
+}
+
+.zoom7 {
+    transform: scale(1.4);
+    padding-top: 12px;
+}
+
+.travis {
+    font-size: larger;
+    transform: scale(1);
+    padding-top: 0;
 }
 
 .LANGUAGE {
@@ -260,6 +285,7 @@ h1 {
 
 .language__name {
     position: absolute;
+    display: inline;
     bottom: 0;
     transform: scale(0);
     transition: all 300ms;
@@ -274,7 +300,7 @@ h1 {
 
 .cloud {
     position: absolute;
-    top: 0;
+    bottom: 0;
     transform: scale(2);
     transition: all 300ms ease;
     font-size: 24px;
@@ -297,6 +323,27 @@ h1 {
     opacity: 1;
 }
 
+.topSpace2 {
+    position: absolute;
+    align-items: center;
+    justify-content: center;
+    top: 0;
+    transform: scale(1);
+    transition: all 3ms ease;
+    font-size: 12px;
+    opacity: 0;
+}
+
+.ai {
+    transform: scale(1);
+    transition: all 1ms ease;
+    opacity: 1; 
+}
+
+.topSpace2:hover .language__name {
+    transform: scale(3);
+    opacity: 1;
+}
 
 /* AI Chatbot Icon I had to make. */
 .groovy {
@@ -304,3 +351,5 @@ h1 {
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
+
+/*----- Project Styles -----*
