--- a/style.css
+++ b/style.css
@@ -1,6 +1,57 @@
 /* Reference https://getbem.com/ "BEM — is a methodology that helps you to create reusable components and code sharing in front‑end development" */
 
-/*===== Generic Styles Section (One Size Fits All Section) =====*/
+/*============================= Generic Styles Section (One Size Fits All Section) =============================*/
+/* Reference this effect from Dr. Dwight McClure (https://www.quora.com/profile/Dr-Dwight-McClure) & Soaib Haque (https://www.quora.com/profile/Soaib-Haque-1) on quora.com */
+/* Initially, my text/objects with this class are hidden. */ 
+.hide-me { 
+    visibility: hidden; 
+    opacity: 1; 
+    transition: visibility 0s, opacity 0.5s; 
+    text-align: left;
+    font-size: larger;
+} 
+   
+/* Using universally; but the idea came from when I was targeting the project's technology/technologies used. This shows my hidden text when it's hovered. Highly Referenced Vista Print's article on this one (https://www.vistaprint.com/hub/branding-colors). */ 
+.hover-container:hover .hide-me {
+    visibility: visible;
+    opacity: 1;
+    transition: transform 500ms ease, 
+    font-size: 16px;
+    margin: 0 12px;
+    font-weight: bold;
+    background: linear-gradient(to right, orange, blue);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+.hover-container2:hover .hide-me {
+    position: absolute;
+    top: 50%;
+    left: 35%;
+    transform: translateY(-50%);
+    max-width: 100%;
+    z-index: 3;
+    opacity: 0;
+    transition: transform 300ms ease, opacity 1ms;
+    visibility: visible;
+    opacity: 1; 
+    font-size: 20px;
+    font-weight: bold;
+    background: linear-gradient(to right, purple, gold, purple, gold, purple, gold);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+/* Using universally; but the idea came from when I was targeting the project's technology/technologies used. */
+.getMe {
+    font-size: 24px;
+    margin: 0 12px;
+    font-weight: bold;
+    background: linear-gradient(to right, blue, orange, blue, orange, blue, orange);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
 /* Choice of font to be utilize. */
 @import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap');
 
@@ -58,9 +109,9 @@ section::nth-child(even) {
     background-color:#f8f8f8;
 }
 
-/*=================== Specific Styles Section ==================*/
-/*----- About Me Section. -----*/
-/* Signature Header <h2> */
+/*=============================================== Specific Styles Section ===============================================*/
+/*============ About Me Section. ============*/
+/* My Signature Header <h2> */
 .about-me__info--subtitle {
     padding: 7px;
     background: linear-gradient(to right, #71713a, #544478);
@@ -68,7 +119,8 @@ section::nth-child(even) {
   -webkit-text-fill-color: transparent;
 }
 
-.about-me {
+/* Look for ID */
+#about-me {
     min-height: 100vh;
     display: flex;
     flex-direction: column;
@@ -139,6 +191,7 @@ section::nth-child(even) {
     flex: 1;
     display: flex;
     align-items: center;
+    width: 100%;
 }
 
 .about-me__img {
@@ -146,12 +199,12 @@ section::nth-child(even) {
     height: 65%;
 }
 
-/* Specific Header 1 Style Given */
-h1 {
+/* Specific Header 1 Style Given.  In the tutorial David Bragg led for us to along with him (pause to do our thing, etc.), so it does not affect any other <h1> tags. */
+.h1 {
     font-size: 36px;
 }
 
-/*----- Navigation Menu Styles -----*
+/*============ Navigation Menu Styles ============*/
 /* How the list was made to line up vs. being stack upon one another. */
 .nav__link--list {
     display: flex;
@@ -179,7 +232,8 @@ h1 {
     background: linear-gradient(90deg, rgba(84,68,120,0.7687861271676301) 18%, rgba(0,0,0,1) 63%);
 }
 
-.personal__logo {
+/* I didn't like the name scheme in the personal logo: because I knew that I would confuse this code for my actual logo (later use); therefore, I change the name scheme to avoid a potential naming conflict, and to practice better semantics regarding myself. THIS IS THE BIG NAME OPENING. */
+.BIG {
     font-size: 24px;
     margin: 0 12px;
     font-weight: bold;
@@ -194,16 +248,26 @@ h1 {
     margin: 0 auto;
 }
 
-/* Since David stated we could make this any color that we want, I just went ahead with a neon glow effect. Ref. https://prismic.io/blog/css-text-animations#8-neon-glow */
-.text--purple {
+/* Since David stated we could make this any color that we want, I just went ahead with adding my flare and style. */
+.myPreference {
     padding: 7px;
     background: linear-gradient(to right, #544478, #71713a);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
 
-/*----- Tech Stach Section -----*/
-/* Improving Icon's Size Depraction. */
+/*============ Tech Stack Section ============*/
+/* What I Had To Do, In Order To Counter The Size Depraction, To My Choice of Icons Used (found all over the web, divers libraries regarding links, which may have their own restrictive CSS properties, etc.). */
+/* Tech Stack Header. */
+.ts1 {
+    font-size: 32px;
+    margin: 0 12px;
+    font-weight: bold;
+    background: linear-gradient(to right, red, orange, yellow, green, blue, indigo, violet, red, orange, yellow, green, blue, indigo, violet, red, orange, yellow, green, blue, indigo, violet, red, orange, yellow, green, blue, indigo, violet, red, orange, yellow, green, blue, indigo, violet, red, orange, yellow, green, blue, indigo, violet, red, orange, yellow, green, blue, indigo, violet, red, orange, yellow, green, blue, indigo, violet, red, orange, yellow, green, blue, indigo, violet, red, orange, yellow, green, blue, indigo, violet);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
 .zoom {
   transform: scale(2);
   padding-top: 8px;
@@ -345,11 +409,162 @@ h1 {
     opacity: 1;
 }
 
-/* AI Chatbot Icon I had to make. */
+/* AI Chatbot Icon I had to make, so that I could include A NEW TECHNOLOGY that I learned within my Tech Stack!  I'm pretty proud of myslef for how it came out; and I am trying to learn a better transition style/way for it to be almost instant/quicker: I want the two different files I save for the AI Chatbot icon to appear as if the robot just suddenly started speaking to you when you hovered over.  What I am most proud of myelf is how I made the "Click Me" work!  If they do not go through all of my projects (because this will be at the end of my stack), then they will see this first (who can't resist pressing buttons and clicking hyperlinks on a site you've already deemed safe). */
 .groovy {
     background: linear-gradient(to right, #71713a, #544478, #ef5350, #f48fb1, #7e57c2, #2196f3, #26c6da, #43a047, #7d852b, #f9a825, #ff5722, #544478);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
 
-/*----- Project Styles -----*
+/*============ Project Styles ============*/
+/* Projects' Header */
+.pj {
+    font-size: 32px;
+    margin: 0 12px;
+    font-weight: bold;
+    background: linear-gradient(to right, blue, orange, blue, orange, blue, orange, blue, orange, blue, orange, blue, orange, blue, orange, blue, orange, blue, orange);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+/* Intro paragraph leading to my projects. */
+.pCool {
+    padding-bottom: 3px;
+    font-size: 20px;
+    margin: 0 12px;
+    font-weight: bold;
+    background: linear-gradient(to right, orange, blue, orange, blue, orange, blue);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+.project {
+    margin-bottom: 135px;
+}
+
+.project:last-child {
+    margin-bottom: 40px;
+}
+
+.project__img {
+    width: 100%;
+    transition: all 300ms ease;
+}
+
+.project__wrapper {
+    display: flex;
+    box-shadow: 0 20px 80px rgba(0, 0, 0, 0.45);
+    border-radius: 20px;
+    overflow: hidden;
+    position: relative;
+}
+
+.project__wrapper:before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    background-color: #1c1d25;
+    opacity: 0;
+    transition: all 450ms ease;
+    z-index: 2;
+    transform: translateY(100%);
+}
+
+.project:hover .project__wrapper:before {
+    transform: translateY(0);
+    opacity: 0.7;
+}
+
+.project:hover .project__img {
+    transform: scale(2);
+    filter: blur(5px);
+}
+
+.project__description {
+    position: absolute;
+    top: 40%;
+    transform: translateY(100%);
+    max-width: 550px;
+    z-index: 3;
+    opacity: 0;
+    transition: transform 450ms, opacity 300ms;
+}
+
+.project:hover .project__description {
+    opacity: 1;
+    transform: translateY(-50%);
+}
+
+.project__list {
+    padding-top: 40px;
+}
+
+
+/* I want to target this title individually. */
+.pt {
+    text-align: center;
+    font-weight: bold;
+    background: linear-gradient(to right, orange, white, orange, white, orange, white);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+.project__description--title {
+    position: relative;
+    left: 45%;
+    font-size: 40px;
+    text-align: center;
+}
+
+/* I want to target the projects sub-title. */
+.project__description--sub-title {
+    position: relative;
+    left: 45%;
+    padding-bottom: 25px;
+    color: #ffeb4b;
+    text-shadow: 0 0 22px firebrick, 0 0 80px firebrick,0 0 120px firebrick, 0 0 160px firebrick, 0 0 200px firebrick;
+    font-weight: bold;
+    background: linear-gradient(to right, orange, white, orange, white, orange, white);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+.project__description--tech-stack {
+    position: relative;
+    left: 35px;
+    padding: 16px;
+}
+
+.project__description--links {
+    position: relative;
+    top: 50px;
+    margin-right: 20px 0;
+    text-decoration: none;
+}
+
+.project__description--para {
+    text-align: left;
+}
+
+.info {
+    position: absolute;
+    top: 98%;
+    right: 2%;
+    color: #ffeb4b;
+    font-size: 20px;
+    text-shadow: 0 0 22px firebrick, 0 0 42px orange, 0 0 62px #ffeb4a, 0 0 52px firebrick, 0 0 72px orange, 0 0 92 #ffeb4a, 0 0 82px firebrick, 0 0 82px orange, 0 0 112px firebrick, 0 0 112px orange, 0 0 142px firebrick, 0 0 142px orange, 0 0 192px firebrick, 0 0 192px orange, 0 0 202px firebrick, 0 0 202px orange;
+    -webkit-box-reflect: below 18px linear-gradient(transparent, #000700);
+    position: relative;
+}
+
+.info2 {
+    position: relative;
+    top: 50%;
+    right: 35px;
+    background: linear-gradient(to right, purple, gold, purple, gold, purple, gold);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
