--- a/style.css
+++ b/style.css
@@ -256,6 +256,7 @@ section:nth-child(even) {
     width: 100%;
     max-width: 800px;
     margin: 0 auto;
+    padding: 0 12px;
 }
 
 /* Since David stated we could make this any color that we want, I just went ahead with adding my flare and style. */
@@ -327,9 +328,9 @@ box-shadow: 0px 45px 45px 45px rgba(255, 164, 46, 0.9);
 }
 
 .LnT {
-    opacity: 1;
-    font-weight: 900;
-    width: 50%;
+    /*opacity: 1;
+    font-weight: 900;*/
+    width: 25%;
     display: flex;
     justify-content: center;
     position: relative;
@@ -340,16 +341,16 @@ box-shadow: 0px 45px 45px 45px rgba(255, 164, 46, 0.9);
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 150px;
-    height: 125px;
-    padding-bottom: /*100px*/ 20px 16px;
+    /* width: 150px;
+    height: 125px; */
+    padding-bottom: 25px 16px;
 }
 
 .language__tools__img {
     width: 100%;
     max-width: 100px;
     transition: all 300ms ease;
-    padding: 12px;
+    /* padding: 12px; */
 }
 
 .language__tools__img:hover {
@@ -358,21 +359,20 @@ box-shadow: 0px 45px 45px 45px rgba(255, 164, 46, 0.9);
     transform: scale(0.9);
 }
 
-.language__tools__list {
+.languages__tools__list {
     display: flex;
     justify-content: center;
     width: 100%;
-    padding-top: 10px;
     flex-wrap: wrap;
 }
 
 .language__tools__name {
     position: absolute;
-    display: inline;
+    /*display: inline;*/
     bottom: 0;
     transform: scale(0);
-    transition: all 300ms;
-    font-size: 24px;
+    transition: all 300ms ease;
+    font-size: 20px;
     opacity: 0;
 }
 
